@@ -513,6 +513,7 @@ version 0.99.0: (2017-08-28)
 version 0.99.2: (2017-09-18)
 - 'newBASiCS_Data': format + checks moved to `HiddenChecksBASiCS_Data` function
 - `HiddenChecksBASiCS_Data`: use of colMeans2, rowMeans2
+- Format in welcome message
 
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
